deploy_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app1.allow-ingress-ui-policy
  namespace: 99992-990002-1001-dev
spec:
  podSelector: {}
  ingress:
    - from:
#      - namespaceSelector:
#          matchLabels:
#            namespace: 99992-990002-1000-prod
      ports:
      - port: 443
        protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99992-990002-1002-dev
    ports:
    - port: 443
      protocol: TCP
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app1.allow-1002-policy
  namespace: 99992-990002-1002-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99992-990002-1001-dev
    ports:
    - port: 443
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99992-990002-1003-dev
    ports:
    - port: 443
      protocol: TCP
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app1.allow-1003-policy
  namespace: 99992-990002-1003-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99992-990002-1002-dev
    ports:
    - port: 443
      protocol: TCP
  policyTypes:
  - Ingress
  - Egress
